# Fastapi-Auth-Gateway

./: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
app/: config.py  cores.py  generate_keys.py  main.py  metrices_middleware.py  otel_config.py  routes.py  schemas.py  security.py  superbase_client.py  token_generator.py
