[project]
name = "fastapi-auth-gateway"
version = "0.1.0"
description = ""
authors = [
    {name = "ankitraj20616",email = "ankitrajthakur803@gmail.com"}
]

requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "supabase (>=2.27.1,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "opentelemetry-api (>=1.23.0,<2.0.0)",
    "opentelemetry-sdk (>=1.23.0,<2.0.0)",
    "opentelemetry-exporter-otlp (>=1.23.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.44b0)",
    "opentelemetry-instrumentation-asgi (>=0.44b0)",
    "opentelemetry-instrumentation-logging (>=0.44b0)"
]

[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
